# Project_4

./: .env.example  README.md  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: create_moderators_group.py  start_mailing.py
mailing/migrations/: 0001_initial.py  0002_message.py  0003_mailing.py  0004_mailingattempt.py  0005_mailing_user_message_user_recipient_user.py  0006_mailingattempt_user_and_more.py  0007_alter_mailing_options_alter_message_options_and_more.py  0008_alter_mailing_options_alter_mailing_status.py  0009_alter_mailing_options.py
mailing/templates/: base.html  mailing_attempt_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  main.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html
mailing/templatetags/: group_check.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_profile.py  0003_alter_user_options_user_is_blocked.py  0004_alter_user_options.py
users/templates/: edit_profile.html  login.html  profile.html  register.html  users_list.html
users/templatetags/: user_filters.py
