[tool.poetry]
name = "project-4"
version = "0.1.0"
description = ""
authors = ["Daria Kolisnyk <dashamel17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.16.1"
isort = "^6.0.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude ="""
(
    /)
        /.git
      | /.eggs
      | /.mypy_cache
      | /.venv
    (/
    | foo.py
)
"""

[tool.isort]
line_length = 119
